--- a/IoT_AutonomousFarm/ui/webApp/plants.html
+++ b/IoT_AutonomousFarm/ui/webApp/plants.html
@@ -147,6 +147,6 @@
     <!-- Bootstrap JavaScript (Place before closing </body>) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="webApp/Sensorjs.js"></script>
+    <script src="js/sensor.js"></script>
   </body>
 </html>
