greenhouses and sensors

--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
@@ -30,18 +30,14 @@
       <table>
         <thead>
           <tr>
-            <th>Greenhouse ID</th>
             <th>Greenhouse Name</th>
-            <th>Owner ID</th>
+            <th>Owner</th>
             <th>Greenhouse Location</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td data-title='greenhouse_id'>
-              {{ greenhouse.greenhouse_id }}
-            </td>
             <td data-title='name'>
               {{ greenhouse.name }}
             </td>
