add devices + add drop down for GH options + add video frame in the main page

--- a/IoT_AutonomousFarm/ui/webApp/html/home.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/home.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,5 +19,18 @@
       <a href="registerform.html" class="header-link">Register</a>
       </nav>
     </header>
+    <div class="video-container">
+        <iframe
+        width="100%"
+        height="500"
+        src="https://www.youtube.com/embed/i5xAuTL3Ftc?si=vUCEC1nH5KUfesxn"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+      
+    </div>
 </body>
 </html>
+
