--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
@@ -30,45 +30,16 @@
       <table>
         <thead>
           <tr>
-            <th>Greenhouse Name</th>
-            <th>Owner</th>
-            <th>Greenhouse Location</th>
-            <th></th>
+            <th class="text-center">Greenhouse Name</th>
+            <th class="text-center">Owner</th>
+            <th class="text-center">Greenhouse Location</th>
+            <th class="text-center">Options</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td data-title='name'>
-              {{ greenhouse.name }}
-            </td>
-            <td data-title='user_id'>
-              {{ greenhouse.user_id }}
-            </td>
-            <td data-title='location'>
-              {{ greenhouse.location }}
-            </td>
-            <td class="select">
-              <button class="select-button" 
-                      data-greenhouse_id="{{ greenhouse.greenhouse_id }}" 
-                      data-user_id="{{ greenhouse.user_id }}"
-                      data-name="{{ greenhouse.name }}" 
-                      data-location="{{ greenhouse.location }}">
-                  Select
-              </button>
-          </td>
-          </tr>
+          
         </tbody>
       </table>
-      <div class='detail'>
-        <div class='detail-container'>
-          </dl>
-        </div>
-        <div class='detail-nav'>
-          <button class='close'>
-            Close
-          </button>
-        </div>
-      </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
