Add- delete Sensors for each greenhouse + query of updating the sensor_id sequence

--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouseDetails.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouseDetails.html
@@ -39,7 +39,7 @@
          <!-- Add sensor Modal -->
          <div id="sensor-modal" class="modal d-none">
           <div class="modal-content">
-            <h1 class="mb-5">Select a Plant</h1>
+            <h1 class="mb-5">Select a Sensor</h1>
            
             <div class="form-group">
               <select class="form-control mb-3 fs-4" id="sensor-select" >
