--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouseDetails.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouseDetails.html
@@ -10,19 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/sensors.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
   </head>
 
   <body>
-    <header>
-      <a class="header-title" id="title">Smart Greenhouse</a>
-      <div class="header-user">
-        <nav>
-          <span id="username-display"></span>
-          <a href="../html/greenhouses.html" id="my-greenhouses-link">Back to my greenhouses</a>
-        </nav>
-        <button id="logout-button">Logout</button>
-      </div>
-    </header>
+    <div id="header-container"></div>
     
     <div class="container">
       <!-- Add sensor Button Row -->
@@ -56,5 +48,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/sensors.js"></script>
+    <script src="../js/shared.js"></script>
   </body>
 </html>
