--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
@@ -10,17 +10,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/greenhouses.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <a href="home.html" class="header-title">Smart Greenhouse</a>
       <div class="header-user">
         <span id="username-display"></span>
         <button id="logout-button">Logout</button>
       </div>
     </header>
-    
+     -->
+
+     <div id="header-container"></div>
+
     <div class="background">
       <div class="shape"></div>
       <div class="shape"></div>
@@ -45,3 +49,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/greenhouses.js"></script>
+    <script src="../js/shared.js"></script>
