--- a/IoT_AutonomousFarm/ui/webApp/html/greenhousedevices.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhousedevices.html
@@ -10,27 +10,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/device.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
   </head>
 
   <body>
-    <header>
-      <a class="header-title" id="title">Smart Greenhouse</a>
-      <div class="header-user">
-        <nav>
-          <span id="username-display"></span>
-          <a href="../html/greenhouses.html" id="my-greenhouses-link">Back to my greenhouses</a>
-        </nav>
-        <button id="logout-button">Logout</button>
-      </div>
-    </header>
-    
+    <div id="header-container"></div>
+
     <div class="container">
          <!-- Add sensor Button Row -->
-         <div class="d-flex justify-content-end mb-3 mt-5">
+         <!-- <div class="d-flex justify-content-end mb-3 mt-5">
           <button id="add-device-btn" class="btn btn-success shadow-sm">
             ➕ Add Devices
           </button>
-        </div>
+        </div> -->
       <div class="row justify-content-center">
         <div class="dashboard-cards">
         </div>
@@ -52,5 +44,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/devices.js"></script>
+    <script src="../js/shared.js"></script>
   </body>
 </html>
