--- a/IoT_AutonomousFarm/ui/webApp/html/partialheader.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/partialheader.html
@@ -8,6 +8,7 @@
       <li><a href="./home.html">Home</a></li>
       <li><a href="./greenhouses.html">Greenhouses</a></li>
       <li><a href="./statistics.html">Statistics</a></li>
+      <li><a href="./userprofile.html" id="userinfo" style="display: none;">User Profile</a></li>
      
     </ul>
   </nav>
