--- a/IoT_AutonomousFarm/ui/webApp/html/addgreenhouse.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/addgreenhouse.html
@@ -9,44 +9,40 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/addgreenhouse.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
   </head>
 
   <body>
+    <div id="header-container"></div>
+
     <div class="background">
       <div class="shape"></div>
       <div class="shape"></div>
     </div>
 
-    <header>
-      <a href="home.html" class="header-title">Smart Greenhouse</a>
-    </header>
-
     <form id="greenhouseform">
-      <h3>Add Greenhouse</h3>
-      <label for="name">Green House Name</label>
-      <input type="text" placeholder="name" id="greenhouse-name" required />
-      <label for="password">Green House Location</label>
+      <h3>ADD GREENHOUSE</h3>
+      <label for="name">Greenhouse Name</label>
+      <input type="text" placeholder="Name" id="greenhouse-name" required />
+      <label for="password">Greenhouse Location</label>
       <input
         type="location"
-        placeholder="location"
+        placeholder="Location"
         id="greenhouse-location"
         required
       />
 
-      <button type="submit">Add</button>
+      <div class="text-center">
+        <button 
+          type="button" class="btn select-button" id="AddGreenhouseButton">
+            Add Greenhouse
+        </button>
+      </div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="../js/addgreenhouse"></script>
-    <script>
-      // inline script that calls loginUser
-      document
-        .getElementById("greenhouseform")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-          addGreenhouse(); // call the function from login.js
-        });
-    </script>
+    <script src="../js/shared.js"></script>
+    <script src="../js/addgreenhouse.js"></script>
   </body>
 </html>
