--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
@@ -14,16 +14,7 @@
   </head>
 
   <body>
-    <!-- <header>
-      <a href="home.html" class="header-title">Smart Greenhouse</a>
-      <div class="header-user">
-        <span id="username-display"></span>
-        <button id="logout-button">Logout</button>
-      </div>
-    </header>
-     -->
-
-     <div id="header-container"></div>
+    <div id="header-container"></div>
 
     <div class="background">
       <div class="shape"></div>
@@ -44,6 +35,12 @@
           
         </tbody>
       </table>
+      <div class="text-center">
+        <button
+          type="button" class="btn select-button" id="AddGreenhouseButton">
+            Add a new greenhouse
+        </button>
+      </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
