--- a/IoT_AutonomousFarm/ui/webApp/html/loginform.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/loginform.html
@@ -14,7 +14,7 @@
   </div>
 
   <header>
-    <a href="home.html" class="header-title">Smart Greenhouse</a>
+    <div id="home-link"><a href="home.html" class="header-title">Smart Greenhouse</a></div>
   </header>
   
   <form  id="loginForm">
