--- a/IoT_AutonomousFarm/ui/webApp/html/userprofile.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/userprofile.html
@@ -15,7 +15,7 @@
   </div>
 
   <header>
-    <a href="home.html" class="header-title">Smart Greenhouse</a>
+    <div id="home-link"><a href="home.html" class="header-title">Smart Greenhouse</a></div>
   </header>
   
   <div class="form-container">
@@ -49,7 +49,7 @@
     <form id="telegramForm">
       <h3>Telegram BOT</h3>
       <label for="email">OTP</label>
-      <input type="text" placeholder="OTp" id="otp" required>
+      <input type="text" placeholder="OTP" id="otp" required>
       <button type="submit"> Save </button>
     </form>
 
@@ -62,14 +62,6 @@
   <script>
     // inline script that calls loginUser
     document.getElementById("profileForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-      loginUser();
-    });
-  </script>
-
-<script>
-    // inline script that calls loginUser
-    document.getElementById("telegramForm").addEventListener("submit", function(event) {
       event.preventDefault();
       loginUser();
     });
