--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouseplants.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouseplants.html
@@ -10,12 +10,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/plants.css" />
-    <link rel="stylesheet" href="../css/shared.css" />
   </head>
 
   <body>
-   
-    <div id="header-container"></div>
+    <header>
+      <a class="header-title" id="title">Smart Greenhouse</a>
+      <div class="header-user">
+        <nav>
+          <span id="username-display"></span>
+          <a href="../html/greenhouses.html" id="my-greenhouses-link">Back to my greenhouses</a>
+        </nav>
+        <button id="logout-button">Logout</button>
+      </div>
+    </header>
+    
     <div class="container mt-4">
       <!-- Add Plant Button Row -->
       <div class="d-flex justify-content-end mb-3">
@@ -48,6 +56,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/plants.js"></script>
-    <script src="../js/shared.js"></script>
   </body>
 </html>
