--- a/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/greenhouses.html
@@ -14,34 +14,32 @@
   </head>
 
   <body>
+
     <div id="header-container"></div>
 
-    <div class="background">
-      <div class="shape"></div>
-      <div class="shape"></div>
-    </div>
+   <div class="main">
+    <div class="container mt-4">
 
-    <main>
-      <table>
-        <thead>
-          <tr>
-            <th class="text-center">Greenhouse Name</th>
-            <th class="text-center">Owner</th>
-            <th class="text-center">Greenhouse Location</th>
-            <th class="text-center">Options</th>
-          </tr>
-        </thead>
-        <tbody>
-          
-        </tbody>
-      </table>
-      <div class="text-center">
-        <button
-          type="button" class="btn select-button" id="AddGreenhouseButton">
-            Add a new greenhouse
+      <div class="d-flex justify-content-end mb-3 w-100">
+        <button id="AddGreenhouseButton" class="btn btn-success shadow-sm">
+          ➕ Add Greenhouse
         </button>
       </div>
-    </main>
+      
+    <table>
+      <thead>
+        <tr>
+          <th class="text-center">Greenhouse Name</th>
+          <th class="text-center">Owner</th>
+          <th class="text-center">Greenhouse Location</th>
+          <th class="text-center">Options</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
