cleaning the app

--- a/IoT_AutonomousFarm/ui/webApp/html/sensors.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/sensors.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
+
     <title>MyGreenhouse</title>
     <!-- Bootstrap CSS -->
     <link
@@ -31,15 +33,15 @@
          <!-- Add sensor Modal -->
          <div id="sensor-modal" class="modal d-none">
           <div class="modal-content">
-            <h1 class="mb-5">Select a Sensor</h1>
+            <h4 class="mb-5">Select a Sensor</h1>
            
             <div class="form-group">
-              <select class="form-control mb-3 fs-4" id="sensor-select" >
+              <select class="form-control mb-3 fs-6" id="sensor-select" >
               </select>
             </div>
             <div class="text-center">
-              <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-5">Cancel</button>
-              <button id="confirm-add-sensor" class="btn btn-success btn-lg btnmodal fs-5">Add</button>
+              <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-6">Cancel</button>
+              <button id="confirm-add-sensor" class="btn btn-success btn-lg btnmodal fs-6">Add</button>
             </div>
           </div>
         </div>
