--- a/IoT_AutonomousFarm/ui/webApp/html/addgreenhouse.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/addgreenhouse.html
@@ -10,6 +10,8 @@
     />
     <link rel="stylesheet" href="../css/addgreenhouse.css" />
     <link rel="stylesheet" href="../css/shared.css" />
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
+
   </head>
 
   <body>
@@ -34,7 +36,7 @@
 
       <div class="text-center">
         <button 
-          type="button" class="btn select-button" id="AddGreenhouseButton">
+          type="button" class="btn select-button fs-6" id="AddGreenhouseButton">
             Add Greenhouse
         </button>
       </div>
