--- a/IoT_AutonomousFarm/ui/webApp/html/areas.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/areas.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
     <title>MyGreenhouse</title>
     <!-- Bootstrap CSS -->
     <link
@@ -11,6 +12,7 @@
     />
     <link rel="stylesheet" href="../css/area.css" />
     <link rel="stylesheet" href="../css/shared.css" />
+
   </head>
 
   <body>
@@ -32,13 +34,13 @@
         <div class="modal-content">
           
           <div class="form-group">
-            <h1 class="mb-5">add a name</h1>
-            <input class="form-control mb-3 fs-4" id="area-name"/>
+            <h4 class="mb-5">add a name</h4>
+            <input class="form-control mb-3 fs-6" id="area-name"/>
           </div>
 
           <div class="text-center">
-            <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-5">Cancel</button>
-            <button id="confirm-add-area" class="btn btn-success btn-lg btnmodal fs-5">Add</button>
+            <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-6">Cancel</button>
+            <button id="confirm-add-area" class="btn btn-success btn-lg btnmodal fs-6">Add</button>
           </div>
         </div>
       </div>
