--- a/IoT_AutonomousFarm/ui/webApp/html/home.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/home.html
@@ -2,9 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
+
     <title>SmartGreenhouse</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/shared.css">
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
