--- a/IoT_AutonomousFarm/ui/webApp/html/plants.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/plants.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
+
     <title>MyGreenhouse</title>
     <!-- Bootstrap CSS -->
     <link
@@ -30,15 +32,15 @@
         <!-- Add Plant Modal -->
         <div id="plant-modal" class="modal d-none">
             <div class="modal-content">
-              <h1 class="mb-5">Select a Plant</h1>
+              <h4 class="mb-5">Select a Plant</h1>
               <!-- <select id="plant-select" class="form-select form-control mb-3"></select> -->
               <div class="form-group">
-                <select class="form-control mb-3 fs-4" id="plant-select" >
+                <select class="form-control mb-3 fs-6" id="plant-select" >
                 </select>
               </div>
               <div class="text-center">
-                <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-5">Cancel</button>
-                <button id="confirm-add-plant" class="btn btn-success btn-lg btnmodal fs-5">Add</button>
+                <button id="cancel-modal" class="btn btn-danger btn-lg btnmodal fs-6">Cancel</button>
+                <button id="confirm-add-plant" class="btn btn-success btn-lg btnmodal fs-6">Add</button>
               </div>
             </div>
           </div>
