--- a/IoT_AutonomousFarm/ui/webApp/html/userprofile.html
+++ b/IoT_AutonomousFarm/ui/webApp/html/userprofile.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../pics/favicon.ico" type="image/x-icon"/>
+
     <title>Login</title>
     <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="../css/shared.css">
     
 </head>
 
