--- a/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
@@ -6,8 +6,8 @@
   <nav>
     <ul>
       <li><a href="./home.html">Home</a></li>
-      <li><a href="./greenhouses.html">Greenhouses</a></li>
-      <li><a href="./statistics.html">Statistics</a></li>
+      <li><a id="greenhouse" href="./greenhouses.html">Greenhouses</a></li>
+      <!-- <li><a href="./statistics.html">Statistics</a></li> -->
       <li id="userinfo"><a href="./userprofile.html">User Profile</a></li>
      
     </ul>
