--- a/IoT_AutonomousFarm/ui/webApp/static/devices.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/devices.html
@@ -19,8 +19,7 @@
 
     <div class="container">
       <div class="row justify-content-center">
-        <div class="dashboard-cards">
-        </div>
+        <div class="dashboard-cards"></div>
          <!-- Add Device Modal -->
          <div id="device-modal" class="modal d-none">
           <div class="modal-content">
@@ -35,9 +34,12 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
     <script src="./js/devices.js"></script>
     <script src="./js/shared.js"></script>
   </body>
