--- a/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="./home.html">Home</a></li>
       <li><a id="greenhouse" href="./greenhouses.html">Greenhouses</a></li>
+      <!-- <li id="scheduling-link" style="display: none;"><a href="./scheduling.html">Scheduling</a></li> -->
       <!-- <li><a href="./statistics.html">Statistics</a></li> -->
       <li id="userinfo"><a href="./userprofile.html">User Profile</a></li>
      
