--- a/IoT_AutonomousFarm/ui/webApp/static/home.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/home.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./pics/favicon.ico" type="image/x-icon"/>
 
-    <title>SmartGreenhouse</title>
+    <title>Greenish</title>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/shared.css">
     <link rel="icon" href="./pics/favicon.ico" type="image/x-icon"/>
@@ -18,15 +18,7 @@
     <div id="header-container"></div>
    
     <div class="video-container">
-        <iframe
-        width="100%"
-        height="500"
-        src="https://www.youtube.com/embed/i5xAuTL3Ftc?si=vUCEC1nH5KUfesxn"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
+        <iframe width="1000" height="500" src="https://www.youtube.com/embed/n0yE2JwaAsI?si=7QWKs_o90uf_cg2T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       
     </div>
   
