--- a/IoT_AutonomousFarm/ui/webApp/static/statistics.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/statistics.html
@@ -18,7 +18,7 @@
     <div id="header-container"></div>
     
     <div class="container" style="margin-top: 100px;">
-      <canvas id="sensorChart" width="400" height="400" style="display: block; box-sizing: border-box; height: 400px; width: 400px;"></canvas>
+      <canvas id="sensorChart"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -37,3 +37,6 @@
   
   </body>
 </html>
+
+
+<!-- // {"read_key": "ZPZG4DZDXG31P2FU", "write_key": "B1VQS0V9EO4UZFXB", "channel_id": "3002703"} -->
