--- a/IoT_AutonomousFarm/ui/webApp/static/userprofile.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/userprofile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./pics/favicon.ico" type="image/x-icon"/>
 
-    <title>Login</title>
+    <title>User Profile</title>
     <link rel="stylesheet" href="./css/profile.css">
     <link rel="stylesheet" href="./css/shared.css">
     
