--- a/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
@@ -7,9 +7,8 @@
     <ul>
       <li><a href="./home.html">Home</a></li>
       <li><a id="greenhouse" href="./greenhouses.html">Greenhouses</a></li>
-      <!-- <li id="scheduling-link" style="display: none;"><a href="./scheduling.html">Scheduling</a></li> -->
-      <!-- <li><a href="./statistics.html">Statistics</a></li> -->
       <li id="userinfo"><a href="./userprofile.html">User Profile</a></li>
+      <li id="telegram"><a href="http://t.me/EnhancedGreenhouse_bot">Telegram Bot</a></li>
      
     </ul>
   </nav>
