--- a/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/partialheader.html
@@ -6,7 +6,7 @@
   <nav>
     <ul>
       <li><a href="./home.html">Home</a></li>
-      <li><a id="greenhouse" href="./greenhouses.html">Greenhouses</a></li>
+      <li id="greenhouse"><a href="./greenhouses.html">Greenhouses</a></li>
       <li id="userinfo"><a href="./userprofile.html">User Profile</a></li>
       <li id="telegram"><a href="http://t.me/EnhancedGreenhouse_bot">Telegram Bot</a></li>
      
