--- a/IoT_AutonomousFarm/ui/webApp/static/home.html
+++ b/IoT_AutonomousFarm/ui/webApp/static/home.html
@@ -18,8 +18,8 @@
     <div id="header-container"></div>
    
     <div class="video-container">
-        <iframe width="1000" height="500" src="https://www.youtube.com/embed/n0yE2JwaAsI?si=7QWKs_o90uf_cg2T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pS2TgX8mEeE?si=yeDTPkjzPRx6dCiR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
   
     <script src="./js/shared.js"></script>
 </body>
